@@ -1,3 +1,5 @@
+* Remove the unused `view` variable and assign `lastContext` a default value of `context`. [jddalton]
+
 * Add the native_api() method to handle simple selectors. [Diego Perini, jddalton]
 
 * Remove the `r` argument from the compiled selectors and make match() support a callback argument. [jddalton]
